--- a/templates/default/default-site.erb
+++ b/templates/default/default-site.erb
@@ -2,7 +2,7 @@ server {
   listen   80;
   server_name  <%= @node[:hostname] %>;
 
-  access_log  <%= @node[:nginx_log_dir] %>/localhost.access.log;
+  access_log  <%= @node[:nginx][:log_dir] %>/localhost.access.log;
 
   location / {
     root   /var/www/nginx-default;
