--- a/templates/default/upstart_conf.erb
+++ b/templates/default/upstart_conf.erb
@@ -6,8 +6,8 @@ author "George Shammas <georgyo@gmail.com>"
 start on (filesystem and net-device-up IFACE=lo)
 stop on runlevel [!2345]
  
-env DAEMON=/usr/sbin/nginx
-env PID=/var/run/nginx.pid
+env DAEMON=<%= node['nginx']['binary'] %>
+env PID=<%= node['nginx']['pid'] %>
  
 expect fork
 respawn
