--- a/templates/default/default-site.erb
+++ b/templates/default/default-site.erb
@@ -5,7 +5,7 @@ server {
   access_log  <%= node['nginx']['log_dir'] %>/localhost.access.log;
 
   location / {
-    root   /var/www/nginx-default;
+    root   /usr/share/nginx/www;
     index  index.html index.htm;
   }
 }
