set root path for the default site via an attribute 'default_site_root'

--- a/templates/default/default-site.erb
+++ b/templates/default/default-site.erb
@@ -5,7 +5,7 @@ server {
   access_log  <%= node['nginx']['log_dir'] %>/localhost.access.log;
 
   location / {
-    root   /usr/share/nginx/www;
+    root   <%= node['nginx']['default_site_root']%>;
     index  index.html index.htm;
   }
 }
