remove recipe defaults (use attribute defaults), fix README snafu, convert unless/nil to if

--- a/templates/default/nginx-upstart.conf.erb
+++ b/templates/default/nginx-upstart.conf.erb
@@ -10,7 +10,7 @@ env PID=<%= @pid %>
 env CONFIG=<%= @config %>
 
 respawn
-<% unless @respawn_limit.nil? %>
+<% if @respawn_limit %>
 respawn limit <%= @respawn_limit %>
 <% end %>
 
