--- a/templates/default/modules/upload_progress.erb
+++ b/templates/default/modules/upload_progress.erb
@@ -1,1 +1,4 @@
-upload_progress <%= @zone_name %> <%= @zone_size %>;
+upload_progress <%= @zone_name -%> <%= @zone_size -%>;
+<% if @javascript_output -%>
+upload_progress_java_output;
+<% end -%>
