silly human. namin' things randomly

--- a/templates/default/fail2ban/nginx-ipban.conf.erb
+++ b/templates/default/fail2ban/nginx-ipban.conf.erb
@@ -5,4 +5,4 @@
 # Notes.:  Regexp to catch a generic call from an IP address.
 # Values:  TEXT
 #
-#failregex = ^<HOST> -.*"(GET|POST).*HTTP.*"$
+failregex = ^<HOST> -.*"(GET|POST).*HTTP.*"$
