Fix disabling of access logs by explictly setting `access_log off;` in main config file

--- a/templates/default/nginx.conf.erb
+++ b/templates/default/nginx.conf.erb
@@ -28,7 +28,9 @@ http {
   include       <%= node['nginx']['dir'] %>/mime.types;
   default_type  application/octet-stream;
 
-  <% unless node['nginx']['disable_access_log'] -%>
+  <% if node['nginx']['disable_access_log'] -%>
+  access_log    off;
+  <% else -%>
   access_log	<%= node['nginx']['log_dir'] %>/access.log;
   <% end %>
 
