--- a/templates/default/nginx.conf.erb
+++ b/templates/default/nginx.conf.erb
@@ -53,8 +53,8 @@ http {
   gzip_buffers <%= node['nginx']['gzip_buffers'] %>;
   <% end -%>
   gzip_types <%= node['nginx']['gzip_types'].join(' ') %>;
-  gzip_min_length  1000;
-  gzip_disable     "MSIE [1-6]\.";
+  gzip_min_length  <%= node['nginx']['gzip_min_length'] %>;
+  gzip_disable     "<%= node['nginx']['gzip_disable'] %>";
   <% end %>
 
   server_names_hash_bucket_size <%= node['nginx']['server_names_hash_bucket_size'] %>;
