--- a/templates/default/nginx.conf.erb
+++ b/templates/default/nginx.conf.erb
@@ -78,4 +78,7 @@ http {
   <% end -%>
   include <%= node['nginx']['dir'] %>/conf.d/*.conf;
   include <%= node['nginx']['dir'] %>/sites-enabled/*;
+  <% if node['nginx']['include_path'] -%>
+  include <%= node['nginx']['include_path'] -%>;
+  <% end -%>
 }
