--- a/templates/default/nginx.conf.erb
+++ b/templates/default/nginx.conf.erb
@@ -79,6 +79,8 @@ http {
   include <%= node['nginx']['dir'] %>/conf.d/*.conf;
   include <%= node['nginx']['dir'] %>/sites-enabled/*;
   <% node['nginx']['include_path'].each do |path| -%>
-  include <%= path %>;
+    <% if File.exist?(path) -%>
+      include <%= path %>;
+    <% end -%>
   <% end -%>
 }
