--- a/templates/default/nginx.sysconfig.erb
+++ b/templates/default/nginx.sysconfig.erb
@@ -1,1 +1,6 @@
+# Note: You may want to look at the following page before setting the ULIMIT.
+#  http://wiki.nginx.org/CoreModule#worker_rlimit_nofile
+# Set the ulimit variable if you need defaults to change.
+#  Example: ULIMIT="-n 4096"
 NGINX_GLOBAL=<%= node['nginx']['global'] %>
+ULIMIT="-n <%= node['nginx']['ulimit'] %>"
