--- a/templates/default/nginx.conf.erb
+++ b/templates/default/nginx.conf.erb
@@ -29,7 +29,7 @@ http {
   default_type  application/octet-stream;
 
   <% if node['nginx']['log_format'] -%>
-  log_format <%= node['nginx']['log_format'] %>
+  log_format <%= node['nginx']['log_format'] %>;
   <% end -%>
 
   <% if node['nginx']['disable_access_log'] -%>
