--- a/templates/default/nginx.conf.erb
+++ b/templates/default/nginx.conf.erb
@@ -59,6 +59,7 @@ http {
   gzip_disable     "<%= node['nginx']['gzip_disable'] %>";
   <% end %>
 
+  server_names_hash_max_size <%= node['nginx']['server_names_hash_max_size'] %>;
   server_names_hash_bucket_size <%= node['nginx']['server_names_hash_bucket_size'] %>;
   types_hash_max_size <%= node['nginx']['types_hash_max_size'] %>;
   types_hash_bucket_size <%= node['nginx']['types_hash_bucket_size'] %>;
