--- a/templates/default/modules/socketproxy.conf.erb
+++ b/templates/default/modules/socketproxy.conf.erb
@@ -25,7 +25,7 @@
     proxy_set_header X-Forwarded-For $remote_addr;
     proxy_set_header X-Forwarded-Proto $http_x_forwarded_proto;
 
-    if ($request_method !~ ^(GET|HEAD|PUT|POST|DELETE|OPTIONS)$ ) {
+    if ($request_method !~ ^(GET|HEAD|PUT|POST|DELETE|OPTIONS|PATCH)$ ) {
       return 405;
     }
 
