Altering the ohai plugin to also look at the Tengine version.

--- a/templates/default/plugins/nginx.rb.erb
+++ b/templates/default/plugins/nginx.rb.erb
@@ -61,6 +61,8 @@ if status == 0
       nginx[:conf_path] = conf_path
     when /^nginx version: nginx\/(.+)/
       nginx[:version] = $1
+    when /Tengine version: Tengine\/(.+) \(/
+      nginx[:version] = $1
     end
   end
 end
