Added default_listen_port to the default-site.erb, used if set and default_site_enabled is set.

--- a/templates/default/default-site.erb
+++ b/templates/default/default-site.erb
@@ -1,5 +1,9 @@
 server {
-  listen   80;
+  <% if  node['nginx']['default_listen_port'] -%> 
+    listen <%= node['nginx']['default_listen_port'] %>;
+  <% else -%>
+    listen 80;
+  <% end -%>
   server_name  <%= node['hostname'] %>;
 
   access_log  <%= node['nginx']['log_dir'] %>/localhost.access.log;
