--- a/templates/default/plugins/nginx.rb.erb
+++ b/templates/default/plugins/nginx.rb.erb
@@ -16,7 +16,7 @@
 # limitations under the License.
 #
 
-Ohai.plugin(:Nginx) do
+Ohai.plugin(:nginx) do
 
   provides "nginx"
   provides "nginx/version"
