--- a/templates/default/nginx.conf.erb
+++ b/templates/default/nginx.conf.erb
@@ -41,6 +41,12 @@ http {
   tcp_nopush on;
   tcp_nodelay on;
 
+  <% if node['nginx']['custom_options'] %>
+  <% node['nginx']['custom_options'].keys.sort.each |key| do %>
+  <%= key %> <%= node['nginx']['custom_options'][key]%>;
+  <% end %>
+  <% end %>
+
   <% if node['nginx']['keepalive'] == 'on' %>
   keepalive_timeout  <%= node['nginx']['keepalive_timeout'] %>;
   <% end %>
