--- a/templates/default/nginx.conf.erb
+++ b/templates/default/nginx.conf.erb
@@ -77,6 +77,13 @@ http {
   <% if node['nginx']['client_max_body_size'] -%>
   client_max_body_size <%= node['nginx']['client_max_body_size'] %>;
   <% end -%>
+  <% if node['nginx']['resolver'] -%>
+
+  resolver <%= node['nginx']['resolver'] %>;
+  <% end -%>
+  <% if node['nginx']['resolver_timeout'] -%>
+  resolver_timeout <%= node['nginx']['resolver_timeout'] %>;
+  <% end -%>
 
   <% if node['nginx']['enable_rate_limiting'] -%>
   limit_req_zone $binary_remote_addr zone=<%= node['nginx']['rate_limiting_zone_name'] %>:<%= node['nginx']['rate_limiting_backoff'] %> rate=<%= node['nginx']['rate_limit'] %>;
