Allowing for selection of ssl protocols

--- a/templates/default/nginx.conf.erb
+++ b/templates/default/nginx.conf.erb
@@ -21,6 +21,7 @@ events {
 }
 
 http {
+  ssl_protocols <%= node['nginx']['ssl_protocols'].join(" ")%>;
   <% if node.recipe?('nginx::naxsi_module') %>
   include       <%= node['nginx']['dir'] %>/naxsi_core.rules;
   <% end %>
