--- a/templates/default/nginx.conf.erb
+++ b/templates/default/nginx.conf.erb
@@ -59,6 +59,11 @@ http {
   gzip_disable     "<%= node['nginx']['gzip_disable'] %>";
   <% end %>
 
+  geo $maintenance {
+    <%= node['nginx']['geo'] %> 
+  }
+
+
   server_names_hash_bucket_size <%= node['nginx']['server_names_hash_bucket_size'] %>;
   types_hash_max_size <%= node['nginx']['types_hash_max_size'] %>;
   types_hash_bucket_size <%= node['nginx']['types_hash_bucket_size'] %>;
