--- a/templates/default/nginx.conf.erb
+++ b/templates/default/nginx.conf.erb
@@ -66,7 +66,7 @@ http {
     <% end %>
   }
 
-
+  proxy_max_temp_file_size 0;
   server_names_hash_bucket_size <%= node['nginx']['server_names_hash_bucket_size'] %>;
   types_hash_max_size <%= node['nginx']['types_hash_max_size'] %>;
   types_hash_bucket_size <%= node['nginx']['types_hash_bucket_size'] %>;
