--- a/templates/default/nginx.conf.erb
+++ b/templates/default/nginx.conf.erb
@@ -65,7 +65,8 @@ http {
     <%= value %> opened;
     <% end %>
   }
-
+   
+  upload_progress proxied 10m; 
   proxy_max_temp_file_size 0;
   server_names_hash_bucket_size <%= node['nginx']['server_names_hash_bucket_size'] %>;
   types_hash_max_size <%= node['nginx']['types_hash_max_size'] %>;
