Add ssl_protocols nginx.conf * Merged  jtimberman@29a3d3b * Added attribute to nginx.conf.erb template, conditional to ssl module * being included when source install * Includes #282

--- a/templates/default/nginx.conf.erb
+++ b/templates/default/nginx.conf.erb
@@ -98,6 +98,14 @@ http {
   <%= key %> <%= value %>;
   <% end -%>
 
+  <% if node['nginx']['install_method'] == 'package' %>
+  ssl_protocols <%= node['nginx']['ssl_protocols'] %>;
+  <% elsif node['nginx']['install_method'] == 'source' %>
+      <% if  node['nginx']['source']['modules'].include? 'nginx::http_ssl_module' %>
+  ssl_protocols <%= node['nginx']['ssl_protocols'] %>;
+      <% end %>
+  <% end -%> 
+
   include <%= node['nginx']['dir'] %>/conf.d/*.conf;
   include <%= node['nginx']['dir'] %>/sites-enabled/*.conf;
 }
