Modifies regexp to not match trailing whitespace, and also delete the map() that deletes whitespace.

--- a/templates/default/plugins/nginx.rb.erb
+++ b/templates/default/plugins/nginx.rb.erb
@@ -50,9 +50,8 @@ if status == 0
   stderr.split("\n").each do |line|
     case line
     when /^configure arguments:(.+)/
-      # Split based on regex. Delete any elements if they do not begin with 2 leading hyphens '--',
-      # and removing trailing whitespace
-      nginx[:configure_arguments] = $1.split(/(--[a-z_0-9-]+=?('[^']+'|[^\s]+|\s)?)/).delete_if { |e| ! e.start_with?('--') }.map{ |e| e.strip }
+      # Split based on regex. Delete any elements if they do not begin with 2 leading hyphens '--'.
+      nginx[:configure_arguments] = $1.split(/(--[a-z_0-9-]+=?('[^']+'|[^\s]+)?)/).delete_if { |e| ! e.start_with?('--') }
 
       prefix, conf_path = parse_flags(nginx[:configure_arguments])
 
