Bugfix sites do not need a .conf suffix anymore

--- a/templates/default/nginx.conf.erb
+++ b/templates/default/nginx.conf.erb
@@ -99,5 +99,5 @@ http {
   <% end -%>
 
   include <%= node['nginx']['dir'] %>/conf.d/*.conf;
-  include <%= node['nginx']['dir'] %>/sites-enabled/*.conf;
+  include <%= node['nginx']['dir'] %>/sites-enabled/*;
 }
