Switch to using regular expressions for location matching on socketproxy (POTENTIALLY BREAKING)

--- a/templates/default/modules/socketproxy.conf.erb
+++ b/templates/default/modules/socketproxy.conf.erb
@@ -43,7 +43,7 @@
       add_header  Cache-Control public;
     }
 
-    location ^~ /<%= app_conf['context_name'] %> {
+    location ~ ^/<%= app_conf['context_name'] %> {
 
       alias $app_home/<%= app %>/<%= app_conf['subdir'] %>/public/;
 
