Add utf8 output to Geo modules
Otherwise, countries and cities with accent, like "Montréal" aren't outputting correctly.

--- a/templates/default/modules/http_geoip.conf.erb
+++ b/templates/default/modules/http_geoip.conf.erb
@@ -1,4 +1,4 @@
-geoip_country <%= @country_dat %>;
+geoip_country <%= @country_dat %> utf8;
 <% if @city_dat -%>
-geoip_city <%= @city_dat %>;
+geoip_city <%= @city_dat %> utf8;
 <% end -%>
