--- a/templates/default/nginx.conf.erb
+++ b/templates/default/nginx.conf.erb
@@ -29,7 +29,7 @@ http {
   <% end %>
 
   include       <%= node['nginx']['dir'] %>/mime.types;
-  default_type  application/octet-stream;
+  default_type  <%= node['nginx']['default_type'] %>;
 
   <% node['nginx']['log_formats'].each do |name, format| %>
   log_format <%= name %> <%= format %>;
