Update mime.types file and add charset_types to the nginx config
This is 99% from https://raw.githubusercontent.com/h5bp/server-configs-nginx/master/mime.types

Signed-off-by: Tim Smith <tsmith@chef.io>

--- a/templates/default/nginx.conf.erb
+++ b/templates/default/nginx.conf.erb
@@ -30,6 +30,7 @@ http {
 
   include       <%= node['nginx']['dir'] %>/mime.types;
   default_type  application/octet-stream;
+  charset_types text/css text/plain text/vnd.wap.wml application/javascript application/json application/rss+xml application/xml;
 
   <% node['nginx']['log_formats'].each do |name, format| %>
   log_format <%= name %> <%= format %>;
