--- a/templates/default/nginx.conf.erb
+++ b/templates/default/nginx.conf.erb
@@ -24,7 +24,7 @@ events {
 }
 
 http {
-  <% if node.recipe?('nginx::naxsi_module') %>
+  <% if node.recipe?('chef_nginx::naxsi_module') %>
   include       <%= node['nginx']['dir'] %>/naxsi_core.rules;
   <% end %>
 
